# CRZcheck

./: .env.example  .env.production.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_hardening.py
app/: settings.py
app/alerts/: freshness_alert.py
app/dashboard/: Home.py
app/dashboard/components/: connection.py  constants.py  export.py  filters.py  queries.py
app/dashboard/pages/: 1_Oznamy.py  (+5 more)
app/db/: models.py  repository.py  session.py
app/flags/: definitions.py  evaluate.py  flags_catalog.py  freshness.py
app/ingestion/: jobs.py
app/transforms/: cleaning.py  entities.py
deploy/: Caddyfile  caddy-setup.sh  install-caddy.sh
docs/: architecture.md  crz-risk-quality-monitor-implementation-plan.md  deployment-checklist.md  limitations.md  master-plan.md  methodology.md  runbook.md  session-context.md  source-notes.md
scripts/: analyze-flags-2.py  analyze-flags.py  backup.sh  check-freshness.sh  demo-video.cjs  deploy.sh  restore.sh  smoke-test.sh
tests/: test_setup.py
tests/alerts/: test_freshness_alert.py
tests/dashboard/: conftest.py  test_connection.py  test_export.py  test_filters.py  test_queries.py
tests/db/: test_models.py  test_repository.py  test_session.py
tests/flags/: test_evaluate.py  test_flags_catalog.py  test_freshness.py
tests/ingestion/: test_download.py  test_jobs.py  test_links.py  test_parser.py
tests/transforms/: test_cleaning.py  test_entities.py
(+5 files in other folders)
