[project]
name = "crz-monitor"
version = "0.1.0"
description = "CRZ Risk & Quality Monitor — Metadata-quality and anomaly radar for Slovak public contracts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27,<0.28",
    "lxml>=5.0,<5.4",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.16",
    "psycopg2-binary>=2.9,<3.0",
    "pandas>=2.2,<3.0",
    "streamlit>=1.35,<2.0",
    "streamlit-extras>=0.4,<0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.4,<0.12",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/dashboard/pages/*",
    "app/dashboard/Home.py",
]

[tool.coverage.report]
fail_under = 80
skip_empty = true
exclude_also = [
    "if __name__ == .__main__.:",
]
